# gegelati

./: .clang-format  .gitignore  .mailmap  .travis.yml  BuildAndPackageLibraryWindows.sh  CMakeLists.txt  CMakeVS2013.bat  CMakeVS2019.bat  Changelog.md  LICENSE.txt  README.md  RunCoverageLinux.sh  RunCoverageWindows.bat  sonar-project.properties
.github/workflows/: ci.yml  release-drafter.yml  ubuntu-gcc.yml
TESTING/: bidon.cpp  copyright_identification.sh  copyright_template.txt
cmake/: InstallBasicPackageFiles.cmake
doc/: CMakeLists.txt  Doxyfile.in  doxywizardProject.txt
doc/codeGen/: TemplateAdversarialLE.cpp  TemplateLearningEnvironment.cpp
gegelatilib/: CMakeLists.txt
gegelatilib/include/: archive.h  environment.h  gegelati.h  parameter.h  supportedTypes.h
gegelatilib/src/: archive.cpp  environment.cpp
include/: archive.h  environment.h  instruction.h  instructionAdd.h  instructionMultByConstParam.h  parameter.h  program.h  supportedTypes.h
include/dataHandlers/: dataHandler.h  primitiveTypeArray.h
include/exporter/: tpgGraphDotExporter.h
include/instructions/: addPrimitiveType.h  instruction.h  lambdaInstruction.h  multByConstParam.h  set.h
include/learn/: learningAgent.h  learningEnvironment.h  learningParameters.h
include/mutator/: lineMutator.h  mutationParameters.h  programMutator.h  rng.h  tpgMutator.h
include/program/: line.h  program.h  programExecutionEngine.h
include/tpg/: tpgAction.h  tpgEdge.h  tpgExecutionEngine.h  tpgGraph.h  tpgVertex.h
lib/JsonCpp/: json.h  jsoncpp.cpp
scripts/: copyright_template.txt  cross_compile_arm.sh  download_archives_linux.sh  fix_code_format.sh  fix_header_copyright_and_authors.sh  prepare_archive_windows.sh  prepare_neutral_build_page.py  prepare_release_log.py  trigger_gegelati-apps.sh  upload_windows.sh
src/: archive.cpp  environment.cpp  instruction.cpp  instructionAdd.cpp  main.cpp  program.cpp
src/dataHandlers/: dataHandler.cpp
src/exporter/: tpgGraphDotExporter.cpp
src/instructions/: instruction.cpp  set.cpp
src/mutator/: rng.cpp  (+3 more)
test/: CMakeLists.txt  LABasicLoggerTest.cpp  adversarialEvaluationResultTest.cpp  adversarialLearningAgentTest.cpp  adversarialLearningEnvironmentTest.cpp  archiveTest.cpp  array2DWrapperTest.cpp  arrayWrapperTest.cpp  classificationLearningAgentTest.cpp  classificationLearningEnvironmentTest.cpp  constantHandlersTest.cpp  constantTest.cpp  cycleDetectionLALoggerTest.cpp  dataHandlerPrinterTest.cpp  dataHandlersTest.cpp  dataHashTest.cpp  demangleTest.cpp  deterministicRandom.h  environmentTest.cpp  evaluationResultTest.cpp  executionStatsTest.cpp  exporterTest.cpp  goldenReferenceComparison.cpp  goldenReferenceComparison.h  importerTest.cpp  improvedClassificationLearningAgentTest.cpp  instructionAddTest.cpp  instructionsTest.cpp  jobTest.cpp  laBasicLoggerTest.cpp  laPolicyStatsLoggerTests.cpp  lambdaInstructionTest.cpp  lambdaPrintableInstructionTest.cpp  learningAgentTest.cpp  learningEnvironmentTest.cpp  learningParametersTest.cpp  lineTest.cpp  loggerTest.cpp  main.cpp  multByConstParamTest.cpp  (+20 more)
test/codeGen/: README.md  stickGameGenerationBestDot.cpp  ticTacToeGenerationBestDot.cpp
test/dat/: StickGame_out_best.dot  TicTacToe_out_best.dot  execution_stats_ref.json  exported_subtpg_ref.dot  exported_tpg_ref.dot  params  params.json  paramsNotConform.json  paramsWithWrongOne.json
test/dat/codeGen/: CMakeLists.txt  Makefile  README.md  compile.bat  compile.sh  externHeader.h  mainOneLeaf.c  mainOneLeafNoInstruction.c  mainOneTeamOneLeaf.c  mainOneTeamTwoLeaves.c  mainStickGameBest_TPG.c  mainThreeLeaves.c  mainThreeTeamsOneCycleThreeLeaves.c  mainTicTacToeBest_TPG.c  mainTwoLeaves.c  mainTwoTeamsOneCycle.c
test/dat/codeGen/FourLeavesMultiAction/: CMakeLists.txt  DataFourLeavesMultiAction.csv  mainFourLeavesMultiAction.c
test/dat/codeGen/OneLeaf/: CMakeLists.txt  mainOneLeaf.c
test/dat/codeGen/OneLeafNoInstruction/: CMakeLists.txt  OneLeafNoInstruction.c_ref  OneLeafNoInstruction.h_ref  OneLeafNoInstruction_program.c_ref  OneLeafNoInstruction_program.h_ref  mainOneLeafNoInstruction.c
test/dat/codeGen/OneTeamOneLeaf/: CMakeLists.txt  mainOneTeamOneLeaf.c
test/dat/codeGen/OneTeamTwoLeaves/: CMakeLists.txt  DataOneTeamTwoLeaves.csv  mainOneTeamTwoLeaves.c
test/dat/codeGen/ProgramGenerationEngineTest.generateCurrentLine/: goldenReference.c  goldenReference.c_ref  goldenReference.h_ref
test/dat/codeGen/StickGameBest_TPG/: CMakeLists.txt  externHeader.h  mainStickGameBest_TPG.c
test/dat/codeGen/ThreeLeaves/: CMakeLists.txt  DataThreeLeaves.csv  mainThreeLeaves.c
test/dat/codeGen/ThreeTeamsOneCycleThreeLeaves/: CMakeLists.txt  DataThreeTeamsOneCycleThreeLeaves.csv  mainThreeTeamsOneCycleThreeLeaves.c
test/dat/codeGen/ThreeTeamsThreeLeaves/: CMakeLists.txt  DataThreeTeamsThreeLeaves.csv  externHeader.h  mainThreeTeamsThreeLeaves.c
test/dat/codeGen/TicTacToeBest_TPG/: CMakeLists.txt  mainTicTacToeBest_TPG.c
test/dat/codeGen/TwoLeaves/: CMakeLists.txt  DataTwoLeaves.csv  externHeader.h  mainTwoLeaves.c
test/dat/codeGen/TwoLeavesMultiAction/: CMakeLists.txt  DataTwoLeaves.csv  mainTwoLeavesMultiAction.c
test/dat/codeGen/TwoTeams/: CMakeLists.txt  DataTwoTeams.csv  externHeader.h  mainTwoTeams.c
test/dat/codeGen/TwoTeamsNegativeBid/: CMakeLists.txt  DataTwoTeamsNegativeBid.csv  externHeader.h  mainTwoTeamsNegativeBid.c
test/dat/codeGen/TwoTeamsOneCycle/: CMakeLists.txt  DataTwoTeamsOneCycle.csv  externHeader.h  mainTwoTeamsOneCycle.c
test/dat/codeGen/TwoTeamsOneCycleNegativeBid/: CMakeLists.txt  DataTwoTeamsOneCycleNegativeBid.csv  externHeader.h  mainTwoTeamsOneCycleNegativeBid.c
test/dat/codeGen/csvparser/: README  csvparser.c  csvparser.h  inferenceCSV.c  inferenceCSV.h
test/learn/: README.md  adversarialLearningAgentWithCustomMakeJobs.h  fakeAdversarialLearningEnvironment.h  fakeClassificationLearningEnvironment.h  fakeImprovedClassificationLearningEnvironment.h  gridWorld.cpp  gridWorld.h  stickGameAdversarial.cpp  stickGameAdversarial.h  stickGameWithOpponent.cpp  stickGameWithOpponent.h
tpglib/: CMakeLists.txt
(+192 files in other folders)
